Fixed Spring Security CORS to allow Vercel